Push from search

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "lit": "*",
+    "minisearch": "*",
     "@stencil/core": "2.14.2",
-    "@divriots/dockit-core": "0.7.2"
+    "@divriots/dockit-core": "^0.7.6",
+    "stencil-jsx-runtime": "*"
   }
 }
