Push from fixcolors

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lit": "*",
     "minisearch": "*",
     "@stencil/core": "2.14.2",
-    "@divriots/dockit-core": "^0.7.6",
-    "stencil-jsx-runtime": "*"
+    "@divriots/dockit-core": "^0.7.8",
+    "stencil-jsx-runtime": "*",
+    "path": "*"
   }
 }
