--- a/studio.config.json
+++ b/studio.config.json
@@ -1,9 +1,22 @@
 {
-  "packages": {
-    "dir": "",
-    "menu": [
-      ["COMPONENTS", ["Props", "Events"]],
-      ["INFRASTRUCTURE", ["layout", "doc-utils"]]
+ "packages": {
+  "dir": "",
+  "menu": [
+   [
+    "COMPONENTS",
+    [
+     "Props",
+     "Events",
+     "Search"
     ]
-  }
+   ],
+   [
+    "INFRASTRUCTURE",
+    [
+     "layout",
+     "doc-utils"
+    ]
+   ]
+  ]
+ }
 }
