Push from cleanup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,6 @@
     "reactNamespace": "React",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "sourceMap": true,
-    "paths": {
-      "~/*": ["*"],
-      "@divriots/starter-sass/*": ["*"]
-    }
+    "sourceMap": true
   }
 }
